@@ -5584,3 +5584,4 @@ v0.92.0.11:
   - API: Added NewShortTimeEvent.
     - Fires an event every 20s (configurable in the config.)
   - Fix metadata display issue on the status screens which could lead to metadata being displayed twice.
+  - Make the town status screen prettier, with a new line for PVP, open and peaceful statuses.
